--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nuxtjs/tailwindcss": "^4.2.1",
     "postcss": "^8.4.4",
     "postcss-html": "^1.3.0",
+    "push-dir": "^0.4.1",
     "stylelint": "^14.1.0",
     "stylelint-config-recommended-vue": "^1.1.0",
     "stylelint-config-standard": "^24.0.0"
