--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "generate": "nuxt generate",
     "lint:style": "stylelint \"**/*.{css,scss,sass,html,vue}\" --ignore-path .gitignore",
     "lint": "npm run lint:style",
-    "lintfix": "npm run lint:style -- --fix"
+    "lintfix": "npm run lint:style -- --fix",
+    "deploy": "push-dir --dir=dist --branch=main --cleanup"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
