--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "webpack": "^4.46.0"
   },
   "devDependencies": {
+    "@nuxt/types": "^2.15.8",
     "@nuxtjs/stylelint-module": "^4.1.0",
     "@nuxtjs/tailwindcss": "^4.2.1",
     "postcss": "^8.4.4",
