--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "stylelint-declaration-block-no-ignored-properties": "^2.5.0",
     "stylelint-order": "^5.0.0",
     "stylelint-processor-html": "^1.0.0",
-    "stylelint-value-no-unknown-custom-properties": "^4.0.0"
+    "stylelint-value-no-unknown-custom-properties": "^4.0.0",
+    "vue-click-outside": "^1.1.0"
   }
 }
