--- a/package.json
+++ b/package.json
@@ -25,10 +25,16 @@
     "webpack": "^4.46.0"
   },
   "devDependencies": {
+    "@aceforth/nuxt-optimized-images": "^1.4.0",
     "@nuxt/image": "^0.7.1",
     "@nuxt/types": "^2.15.8",
     "@nuxtjs/stylelint-module": "^4.1.0",
     "@nuxtjs/tailwindcss": "^4.2.1",
+    "imagemin-gifsicle": "^7.0.0",
+    "imagemin-mozjpeg": "^9.0.0",
+    "imagemin-pngquant": "^9.0.2",
+    "imagemin-svgo": "^9.0.0",
+    "lazysizes": "^5.3.2",
     "postcss": "^8.4.4",
     "postcss-html": "^1.3.0",
     "postcss-scss": "^4.0.4",
@@ -45,6 +51,7 @@
     "stylelint-order": "^5.0.0",
     "stylelint-processor-html": "^1.0.0",
     "stylelint-value-no-unknown-custom-properties": "^4.0.0",
-    "vue-click-outside": "^1.1.0"
+    "vue-click-outside": "^1.1.0",
+    "webp-loader": "^0.6.0"
   }
 }
