--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@fancyapps/ui": "^4.0.27",
     "@nuxt/image": "^0.7.1",
     "@nuxt/types": "^2.15.8",
+    "@nuxtjs/redirect-module": "^0.3.1",
     "@nuxtjs/stylelint-module": "^4.1.0",
     "@nuxtjs/tailwindcss": "^4.2.1",
     "imagemin-gifsicle": "^7.0.0",
