--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nuxt/types": "^2.15.8",
     "@nuxtjs/stylelint-module": "^4.1.0",
     "@nuxtjs/tailwindcss": "^4.2.1",
+    "@popperjs/core": "^2.11.5",
     "imagemin-gifsicle": "^7.0.0",
     "imagemin-mozjpeg": "^9.0.0",
     "imagemin-pngquant": "^9.0.2",
