--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "imagemin-pngquant": "^9.0.2",
     "imagemin-svgo": "^9.0.0",
     "lazysizes": "^5.3.2",
+    "nuxt-purgecss": "^1.0.0",
     "postcss": "^8.4.4",
     "postcss-html": "^1.3.0",
     "postcss-scss": "^4.0.4",
